--- a/mods/vampirism-become-a-vampire.pw.toml
+++ b/mods/vampirism-become-a-vampire.pw.toml
@@ -1,13 +1,13 @@
 name = "Vampirism - Become a vampire!"
-filename = "Vampirism-1.16.5-1.9.0-alpha+20220807-1755.jar"
+filename = "Vampirism-1.16.5-1.8.10.jar"
 side = "both"
 
 [download]
 hash-format = "sha1"
-hash = "e06bd81cbb20f39bc96fda179ed3ec39786a8256"
+hash = "5c043e7e6513d25e868fc47ee66ca9dec828a07a"
 mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
-file-id = 3923280
+file-id = 3856886
 project-id = 233029
