--- a/mods/advanced-peripherals.pw.toml
+++ b/mods/advanced-peripherals.pw.toml
@@ -1,13 +1,13 @@
 name = "Advanced Peripherals"
-filename = "advancedperipherals-1.18.2-0.7.16b.jar"
+filename = "AdvancedPeripherals-0.7.18r.jar"
 side = "both"
 
 [download]
 hash-format = "sha1"
-hash = "d8a0ad94ebbc0305d18ce4a1bd5a68f4540de70d"
+hash = "026e4a25f4003a084935d201c32b0811d5c0069c"
 mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
-file-id = 3882022
+file-id = 3963330
 project-id = 431725
