--- a/mods/jei.pw.toml
+++ b/mods/jei.pw.toml
@@ -1,13 +1,13 @@
 name = "Just Enough Items (JEI)"
-filename = "jei-1.18.2-forge-10.1.4.258.jar"
+filename = "jei-1.18.2-9.7.2.259.jar"
 side = "both"
 
 [download]
 hash-format = "sha1"
-hash = "4beaec1fb2c5ee0d19471ec0196648ad61f6ac5e"
+hash = "82719a5198c97aa23de6b85073059ae91d3a9c26"
 mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
-file-id = 3963288
+file-id = 3963953
 project-id = 238222
